# solai-erp-system

./: .env.example  .gitignore  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  main.py  manage.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
apps/assets/: __init__.py  admin.py  api.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
apps/commercial/: __init__.py  admin.py  api.py  apps.py  models.py  urls.py  views.py
apps/core/: admin.py  auth.py  auth_backends.py  billing.py  context_processors.py  decorators.py  forms.py  models.py  services.py  services_lgpd.py  urls.py  views.py
config/: api.py  celery.py  urls.py
config/settings/: base.py  development.py  production.py  testing.py
docker/: Dockerfile
docker/nginx/: cloudflare.conf  default.conf
shared/middleware/: cloudflare_waf.py  enforce_2fa.py  ratelimit.py  tenant.py
shared/permissions/: __init__.py  backends.py
shared/utils/: encryption.py  jwt.py  masking.py
static/css/: empty.css
templates/: base.html  billing.html  dashboard.html  landing.html
templates/assets/: batch_detail.html  batch_form.html  batch_list.html  brand_detail.html  brand_form.html  brand_list.html  category_detail.html  category_form.html  category_list.html  item_detail.html  item_form.html  item_list.html  model_detail.html  model_form.html  model_list.html  stock_dashboard.html  stock_transaction_form.html  stock_transaction_list.html  tech_sheet_template_detail.html
templates/commercial/: base_dashboard.html  partner_detail.html  partner_form.html  partner_list.html
templates/components/: alert.html  badge.html  btn.html  card.html  input.html  modal.html  table.html  tokens.html
templates/core/: invite_accept.html  invite_create.html  invite_created.html  login.html  recovery_confirm.html  recovery_request.html  recovery_success.html  role_form.html  role_list.html  (+11 more)
tests/: test_admin_registration.py  test_assets.py  test_assets_crud.py  test_assets_dashboard.py  test_auth.py  test_auth_views.py  test_basic.py  test_batch_tasks.py  test_commercial.py  test_design_system.py  test_permissions_management.py  test_rate_limiting.py  test_roles_crud.py  test_settings_profile.py  test_tenant.py  test_users_crud.py
(+15 files in other folders)
