[project]
name = "solai-erp-system"
version = "0.3.0"
description = "SolAI ERP SaaS B2B Multi-Tenant"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.0.0,<6.0.0",
    "django-environ>=0.11.2",
    "django-ninja>=1.1.0",
    "pydantic>=2.0.0",
    "django-simple-history>=3.7.0",
    "psycopg[binary]>=3.1.18",
    "redis>=5.0.3",
    "pyjwt>=2.13.0",
    "stripe>=15.2.0",
    "validate-docbr>=0.5",
    "python-barcode>=0.16.1",
    "celery>=5.3.0",
    "argon2-cffi>=23.1.0",
    "django-otp>=1.7.0",
    "qrcode>=8.2",
    "cryptography>=49.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "mypy>=2.1.0",
    "django-stubs>=6.0.5",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["F403", "F405", "E501"]
"**/migrations/*.py" = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--ds=config.settings.testing"

